# nydus

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  go.work
.github/: CODEOWNERS  copilot-instructions.md
.github/scripts/: FAQ.md  OVERVIEW.md  README.md  analyze_coverage.py  generate_report.py  generate_tests.py  test_workflow.sh  validate_tests.py
.github/workflows/: ci.yml  convert.yml  coverage-improvement.yml  devcontainer.yml  release.yml  smoke.yml
api/src/: config.rs  http.rs  http_endpoint_common.rs  http_endpoint_v1.rs  http_endpoint_v2.rs
builder/src/: chunkdict_generator.rs  directory.rs  optimize_prefetch.rs
builder/src/core/: bootstrap.rs  mod.rs  v5.rs
clib/: Cargo.toml
contrib/nydus-coverage-tool/: .gitignore  Makefile  README.md  go.mod  go.sum
contrib/nydus-coverage-tool/cmd/coverage-tool/: main.go  main_test.go
contrib/nydus-overlayfs/: go.mod  go.sum
contrib/nydus-snapshotter/pkg/auth/: keychain.go  keychain_test.go
contrib/nydus-snapshotter/pkg/daemon/: config.go
contrib/nydus-snapshotter/pkg/errdefs/: errors.go
contrib/nydus-snapshotter/pkg/filesystem/nydus/: config_test.go  daemonconfig.go  fs.go
contrib/nydus-snapshotter/pkg/filesystem/stargz/: config.go  digest.go  digest_test.go  fs.go
contrib/nydus-snapshotter/pkg/nydussdk/: client.go  client_test.go
contrib/nydus-snapshotter/pkg/nydussdk/model/: model.go
contrib/nydus-snapshotter/pkg/process/: store.go
contrib/nydus-snapshotter/pkg/signature/: signature.go
contrib/nydus-snapshotter/pkg/store/: store.go
contrib/nydus-snapshotter/pkg/utils/registry/: registry_test.go
contrib/nydus-snapshotter/pkg/utils/signals/: signal_test.go
contrib/nydus-snapshotter/pkg/utils/signer/: signer.go
contrib/nydus-snapshotter/snapshot/: serve.go
contrib/nydusify/cmd/: nydusify_test.go
contrib/nydusify/pkg/backend/: backend_test.go  oss_test.go  s3_test.go
contrib/nydusify/pkg/cache/: cache_test.go
contrib/nydusify/pkg/checker/: checker_test.go  output_test.go
contrib/nydusify/pkg/checker/rule/: bootstrap_test.go  manifest_test.go  (+1 more)
contrib/nydusify/pkg/committer/: commiter_additional_test.go  commiter_test.go  util_test.go
contrib/nydusify/pkg/compactor/: compactor_test.go
contrib/nydusify/pkg/converter/: config_test.go  converter_test.go  hosts_test.go
contrib/nydusify/pkg/copier/: copier_gomonkey_test.go  copier_test.go
contrib/nydusify/pkg/hook/: hook_test.go
contrib/nydusify/pkg/metrics/: metrics_test.go
contrib/nydusify/pkg/optimizer/: optimizer_test.go
contrib/nydusify/pkg/parser/: parser_test.go
contrib/nydusify/pkg/provider/: logger_test.go  remote_test.go  source_test.go
contrib/nydusify/pkg/remote/: reader_test.go
contrib/nydusify/pkg/utils/: utils_test.go
contrib/nydusify/pkg/viewer/: viewer_test.go
misc/: cleanup-profraw.sh
misc/devcontainer/: Dockerfile  cargo-config.toml  docker-daemon.json  entrypoint.sh  env.sh  prepare-old-nydus-bianry.sh  prepare-snapshotter.sh  snapshotter_config.toml  stop-service.sh
misc/dragonfly-client-core/: Cargo.toml
misc/dragonfly-client-util/: Cargo.toml
misc/dragonfly-client-util/src/net/: mod.rs
misc/dragonfly-client-util/src/request/: mod.rs
misc/smoke/: Dockerfile
rafs/: Cargo.toml
rafs/src/: fs.rs  prefetch.rs
rafs/src/metadata/: chunk.rs  layout.rs  mod.rs  noop.rs
rafs/src/metadata/layout/: mod.rs
rafs/src/mock/: mock_chunk.rs  mock_inode.rs  mock_super.rs
rafs/src/storage/backend/: registry.rs
service/: Cargo.toml
service/src/: blob_cache.rs  daemon.rs  lib.rs  upgrade.rs
smoke/: Makefile  go.mod  go.sum
smoke/tests/: api_test.go  cas_test.go
storage/: Cargo.toml
storage/src/: device.rs  lib.rs  utils.rs
storage/src/backend/: object_storage.rs  pauser.rs
storage/src/cache/state/: digested_chunk_map.rs  noop_chunk_map.rs
storage/src/meta/: mod.rs
(+15 files in other folders)
