[package]
name = "dragonfly-client-core"
description = "Core library for the dragonfly client"
version = "1.3.8"
authors = ["The Dragonfly Developers"]
homepage = "https://d7y.io/"
repository = "https://github.com/dragonflyoss/client.git"
keywords = ["dragonfly", "dragonfly-client", "p2p", "container", "docker-image"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
http = "1"
reqwest = { version = "0.12.28", features = [
    "stream",
    "native-tls",
    "default-tls",
    "rustls-tls",
    "blocking",
    "hickory-dns",
] }
reqwest-middleware = "0.4"
thiserror = "2.0"
tonic = { version = "=0.14.2", features = ["tls-ring"] }
tonic-reflection = "=0.14.5"
tokio = { version = "1.52.1", features = ["full", "tracing"] }
tokio-stream = "0.1.18"
hyper = { version = "1.9", features = ["full"] }
hyper-util = { version = "0.1.20", features = [
    "client",
    "client-legacy",
    "tokio",
    "server-auto",
    "http1",
    "http2",
] }
opendal = { version = "0.55.0", features = [
    "services-fs",
    "services-s3",
    "services-azblob",
    "services-gcs",
    "services-oss",
    "services-obs",
    "services-cos",
    "services-webhdfs",
] }
url = "2.5.4"
headers = "0.4.1"
vortex-protocol = "0.1.5"

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.5"

[workspace]
