[package]
name = "dragonfly-client-util"
description = "Utility library for the dragonfly client"
version = "1.3.8"
authors = ["The Dragonfly Developers"]
homepage = "https://d7y.io/"
repository = "https://github.com/dragonflyoss/client.git"
keywords = ["dragonfly", "dragonfly-client", "p2p", "container", "docker-image"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
dragonfly-client-core = { path = "../dragonfly-client-core", version = "1.3.8" }
dragonfly-api = "=2.2.28"
async-trait = "0.1"
http-range-header = "0.4.2"
http = "1"
tracing = "0.1"
tokio-util = { version = "0.7.18", features = ["full"] }
tonic = { version = "=0.14.2", features = ["tls-ring"] }
futures = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
url = "2.5.4"
regex = "1.12.3"
reqwest = { version = "0.12.28", features = [
    "stream",
    "native-tls",
    "default-tls",
    "rustls-tls",
    "blocking",
    "hickory-dns",
] }
rcgen = { version = "0.12.1", features = ["x509-parser"] }
rustls = { version = "0.23.38", default-features = false, features = [
    "tls12",
    "ring",
] }
rustls-pki-types = "1.14.1"
rustls-pemfile = "2.2.0"
fs2 = "0.4.3"
sha2 = "0.10"
uuid = { version = "1.20", features = ["v4"] }
sysinfo = { version = "0.32.1", default-features = false, features = [
    "component",
    "disk",
    "network",
    "system",
    "user",
] }
hex = "0.4"
crc32fast = "1.5.0"
openssl = { version = "0.10", features = ["vendored"] }
lazy_static = "1.5"
bytesize = { version = "1.3.3", features = ["serde"] }
lru = "0.16.3"
tokio = { version = "1.52.1", features = ["full", "tracing"] }
bytes = "1.11"
hashring = "0.3.6"
tonic-health = "=0.14.5"
local-ip-address = "0.6.5"
hostname = "^0.4"
dashmap = "6.1.0"
reqwest-tracing = "0.5"
reqwest-middleware = "0.4"
num_cpus = "1.17"
humantime-serde = "1.1.1"
oci-client = { version = "0.16.1", default-features = false, features = [
    "native-tls",
] }
oci-spec = "0.9"
rustix = { version = "1.1.3", features = ["fs"] }
base64 = "0.22.1"
pnet = "0.35.0"
protobuf = "3.7.2"
libc = "0.2.186"
ringbuf = "0.4.8"
parking_lot = "0.12.5"

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.5"

[dev-dependencies]
tempfile = "3.25.0"
mocktail = { version = "0.3.0", git = "https://github.com/IBM/mocktail", rev = "860e75e171a8eb818083813dbeed4401d1a40b3b" }

[workspace]
